added moray eel to nightfishing loot

--- a/src/main/resources/assets/expandedfishing/lang/en_us.json
+++ b/src/main/resources/assets/expandedfishing/lang/en_us.json
@@ -1,3 +1,4 @@
 {
-  "item.expandedfishing.snapper": "Snapper"
+  "item.expandedfishing.snapper": "Snapper",
+  "item.expandedfishing.moray_eel": "Moray Eel"
 }
