added cooked snapper and corresponding recipes
note, night fishing should yield slightly more XP than day fishing. ie 0.4 instead of 0.35 for snapper

--- a/src/main/resources/assets/expandedfishing/lang/en_us.json
+++ b/src/main/resources/assets/expandedfishing/lang/en_us.json
@@ -1,4 +1,5 @@
 {
-  "item.expandedfishing.snapper": "Snapper",
+  "item.expandedfishing.snapper": "Red Snapper",
+  "item.expandedfishing.cooked_snapper": "Cooked Red Snapper",
   "item.expandedfishing.moray_eel": "Moray Eel"
 }
