added Bountiful enchantment for fishing rod
I - 20% chance to get 2 catches
II - 40% chance to get 2 catches
III - 60% chance to get 2 catches
IV - 60% chance to get 3 catches
V - 75% chance to get 3 catches

--- a/src/main/resources/assets/expandedfishing/lang/en_us.json
+++ b/src/main/resources/assets/expandedfishing/lang/en_us.json
@@ -1,5 +1,7 @@
 {
   "item.expandedfishing.snapper": "Red Snapper",
   "item.expandedfishing.cooked_snapper": "Cooked Red Snapper",
-  "item.expandedfishing.moray_eel": "Moray Eel"
+  "item.expandedfishing.moray_eel": "Moray Eel",
+
+  "enchantment.expandedfishing.bountiful": "Bountiful"
 }
