--- a/src/main/resources/assets/expandedfishing/lang/en_us.json
+++ b/src/main/resources/assets/expandedfishing/lang/en_us.json
@@ -2,6 +2,8 @@
   "item.expandedfishing.snapper": "Red Snapper",
   "item.expandedfishing.cooked_snapper": "Cooked Red Snapper",
   "item.expandedfishing.moray_eel": "Moray Eel",
+  "item.expandedfishing.sea_urchin": "Sea Urchin",
+  "item.expandedfishing.quipper": "Quipper",
 
   "enchantment.expandedfishing.bountiful": "Bountiful"
 }
